base/cat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-api
  namespace: cat
  labels:
    app: cat-api
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cat-api
